feat: Add FaturaLab v2 UI automation framework and UAT suite
Introduce Selenium+Cucumber page objects, multi-role session management,
UI/UAT feature files, test runners, and dev2 environment configuration.

Co-authored-by: Cursor <cursoragent@cursor.com>