@@ -1,87 +1,133 @@
 package com.faturalab.automation.utils;
 
+import com.faturalab.automation.reporting.CucumberExtendedReportGenerator;
+
 import java.awt.Desktop;
 import java.io.File;
 import java.io.IOException;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Locale;
 
+/**
+ * Koşudan sonra Cucumber HTML / extended (masterthought) raporunu tarayıcıda açar.
+ * {@code faturalab.cucumber.report.suite} ({@code uat}, {@code ui}, {@code api}) hangi extended öncelikli.
+ */
 public class ReportOpener {
-    
-    private static final String[] REPORT_PATHS = {
-        "target/cucumber-reports/advanced-reports/cucumber-html-reports/overview-features.html", // Advanced Report (PRIORITY 1)
-        "target/cucumber-reports/index.html",        // Basic Cucumber HTML Report (PRIORITY 2)
-        "target/surefire-reports/index.html",       // TestNG Report (PRIORITY 3)
-        "target/cucumber-reports/cucumber.json"     // JSON Report (for info)
-    };
-    
+
     public static void main(String[] args) {
-        System.out.println("🌐 Opening test reports in browser...");
-        
+        System.out.println("Opening test reports in browser...");
+
         try {
             boolean reportOpened = false;
-            
-            // Try to open the first available report
-            for (String reportPath : REPORT_PATHS) {
+
+            for (String reportPath : orderedReportPaths()) {
                 File reportFile = new File(reportPath);
                 if (reportFile.exists()) {
-                    System.out.println("📊 Found report: " + reportPath);
-                    
+                    System.out.println("Found report: " + reportPath);
+
                     if (openInBrowser(reportFile)) {
-                        System.out.println("✅ Report opened successfully: " + reportPath);
+                        System.out.println("Report opened successfully: " + reportPath);
                         reportOpened = true;
                         break;
                     }
                 }
             }
-            
+
             if (!reportOpened) {
-                System.out.println("⚠️ No test reports found or unable to open browser");
-                System.out.println("📋 Please manually check these locations:");
-                for (String path : REPORT_PATHS) {
+                System.out.println("No test reports found or unable to open browser");
+                System.out.println("Check these locations:");
+                for (String path : orderedReportPaths()) {
                     System.out.println("   - " + path);
                 }
             }
-            
+
         } catch (Exception e) {
-            System.err.println("❌ Error opening reports: " + e.getMessage());
+            System.err.println("Error opening reports: " + e.getMessage());
             e.printStackTrace();
         }
     }
-    
+
+    static List<String> orderedReportPaths() {
+        String suite = System.getProperty("faturalab.cucumber.report.suite", "").trim().toLowerCase(Locale.ROOT);
+        String extRel = CucumberExtendedReportGenerator.OVERVIEW_FEATURES_HTML;
+
+        List<String> paths = new ArrayList<>();
+
+        if ("uat".equals(suite)) {
+            paths.add(pathUatExtended(extRel));
+            paths.add("target/cucumber-reports/uat/index.html");
+        } else if ("ui".equals(suite)) {
+            paths.add(pathUiExtended(extRel));
+            paths.add("target/cucumber-reports/ui/index.html");
+        } else if ("api".equals(suite)) {
+            paths.add(pathRootExtended(extRel));
+            paths.add("target/cucumber-reports/index.html");
+        } else {
+            paths.add(pathRootExtended(extRel));
+            paths.add(pathUatExtended(extRel));
+            paths.add(pathUiExtended(extRel));
+            paths.add("target/cucumber-reports/uat/index.html");
+            paths.add("target/cucumber-reports/ui/index.html");
+            paths.add("target/cucumber-reports/index.html");
+            paths.add("target/surefire-reports/index.html");
+            return paths;
+        }
+
+        paths.add(pathRootExtended(extRel));
+        paths.add("target/cucumber-reports/index.html");
+        paths.add("target/surefire-reports/index.html");
+        return paths;
+    }
+
+    private static String pathUatExtended(String extRel) {
+        return "target/cucumber-reports/uat/advanced-reports/" + extRel;
+    }
+
+    private static String pathUiExtended(String extRel) {
+        return "target/cucumber-reports/ui/advanced-reports/" + extRel;
+    }
+
+    private static String pathRootExtended(String extRel) {
+        return "target/cucumber-reports/advanced-reports/" + extRel;
+    }
+
     private static boolean openInBrowser(File htmlFile) {
+        if (htmlFile == null || !htmlFile.exists() || !htmlFile.isFile()) {
+            return false;
+        }
         try {
-            // Check if Desktop is supported
             if (Desktop.isDesktopSupported()) {
                 Desktop desktop = Desktop.getDesktop();
-                
-                // Check if browse action is supported
+                if (desktop.isSupported(Desktop.Action.OPEN)) {
+                    desktop.open(htmlFile);
+                    return true;
+                }
                 if (desktop.isSupported(Desktop.Action.BROWSE)) {
-                    desktop.browse(htmlFile.toURI());
+                    desktop.browse(htmlFile.getCanonicalFile().toURI());
                     return true;
                 }
             }
-            
-            // Fallback: Try OS-specific commands
-            String os = System.getProperty("os.name").toLowerCase();
-            String filePath = htmlFile.getAbsolutePath();
-            
+
+            String os = System.getProperty("os.name", "").toLowerCase(Locale.ROOT);
+            String filePath = htmlFile.getCanonicalPath();
+
             if (os.contains("win")) {
-                // Windows
-                Runtime.getRuntime().exec("rundll32 url.dll,FileProtocolHandler " + filePath);
-                return true;
-            } else if (os.contains("mac")) {
-                // macOS
-                Runtime.getRuntime().exec("open " + filePath);
-                return true;
-            } else if (os.contains("nix") || os.contains("nux")) {
-                // Linux
-                Runtime.getRuntime().exec("xdg-open " + filePath);
+                new ProcessBuilder("cmd.exe", "/c", "start", "", filePath).start();
                 return true;
             }
-            
+            if (os.contains("mac")) {
+                new ProcessBuilder("open", filePath).start();
+                return true;
+            }
+            if (os.contains("nix") || os.contains("nux")) {
+                new ProcessBuilder("xdg-open", filePath).start();
+                return true;
+            }
         } catch (IOException e) {
             System.err.println("Failed to open report: " + e.getMessage());
         }
-        
+
         return false;
     }
-} 
+}
